Fix link visibility

--- a/app/assets/stylesheets/global/_header.sass
+++ b/app/assets/stylesheets/global/_header.sass
@@ -4,6 +4,10 @@ header
     max-width: 500px
 
   nav
-    span
-      text-transform: uppercase
+    .link
       display: inline-block
+
+      a
+        text-transform: uppercase
+        margin: 10px 20px
+        border: 0
